@@ -1,6 +1,7 @@
      2.3.0  TBD...
 
-       NEW: Support for setting analog bandwidth.
+       NEW: Support for setting analog bandwidth of receivers that support it.
+       NEW: Remember visibility status of main toolbar.
      FIXED: Incorrect handling of decimal values in LNB LO frequency.
      FIXED: Correctly apply initial LNB LO frequency.
      FIXED: Audio output device selection on Mac OS X.
